# FastAPI-PubSub-Middleware

./: .gitignore  CLAUDE.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 13013f99c854_integrations_tables.py  350aff97b98f_initial_migration_with_example_table.py  41c1d0812a62_integrations_tables.py  9e520d4541b5_integration_logs_table.py  a1b2c3d4e5f6_seed_fetcher_request_details.py  c3327b64a720_prepedidologs_table.py  faa5329473ae_vans_table_s.py
app/: __init__.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/core/: __init__.py  config.py  depedencies.py  dependencies.py  mongo.py  security.py
app/core/logging/: __init__.py  logger.py  middleware.py  request.py
app/domain/: __init__.py
app/domain/entities/auth/: auth_provider.py  loader.py
app/domain/entities/integrations/: integration.py
app/domain/protocol/: __init__.py
app/infrastructure/: __init__.py
app/infrastructure/auth/: base_auth_provider.py  basic_auth.py  bearer.py  body_auth.py  context.py  graphql_auth.py  loader.py
app/infrastructure/datasul/: datasul_service.py
app/infrastructure/db/: __init__.py  base.py
app/infrastructure/pubsub/: dev_pubsub.py  pubsub.py
app/infrastructure/vans/: operations_loader.py
app/pipelines/vans/: observer_pipeline.py  van_pipeline.py
app/tests/: __init__.py
app/tests/auth/: test_auth_loader.py
app/tests/vans/: test_observer_subscriber_mock_e2e.py  test_van_pipeline_backup.py  test_wholesaler_integration.py  test_wholesaler_observer.py  test_wholesaler_observer_e2e.py  test_wholesaler_pipeline.py
(+88 files in other folders)
