[project]
name = "testchamberfastapi"
version = "0.1.0"
description = "Project for testing FastAPI applications"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=46.0.5",
    "edwh-uuid7>=0.2.3",
    "faker>=40.1.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.40.0",
]
